# lang-ground

./: .gitignore  README.md  app_langgnd.py  app_langground.py  app_langloc.py  example.py  pyproject.toml  requirements.txt  setup.py
langground/: __init__.py  llm.py  localizer.py  objects.txt  orch.py  tracker.py  utils.py
langground/objs/: owl.txt  yolo.txt
